# src/main/java/com/nm/fragmentsclean/coffeeContext/write/businessLogic/models/CoffeeDetailsEditedEvent.java
@@ -1,0 +1,15 @@
+package com.nm.fragmentsclean.coffeeContext.write.businessLogic.models;
+
+import java.time.Instant;
+import java.util.UUID;
+
+import com.nm.fragmentsclean.coffeeContext.write.businessLogic.models.VO.CoffeeId;
+import com.nm.fragmentsclean.sharedKernel.businesslogic.models.DomainEvent;
+
+public record CoffeeDetailsEditedEvent(
+        UUID eventId,
+        UUID commandId,
+        CoffeeId coffeeId,
+        int version,
+        Instant occurredAt,
+        Instant clientAt) implements DomainEvent { }
